--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
+    "@astrojs/cloudflare": "^12.5.2",
     "@tailwindcss/typography": "^0.5.16"
   }
 }
